# gradient_optimization_method

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py
impl/: first.cpp  fiveth.cpp  fourth.cpp  second.cpp  sixth.cpp  thirt.cpp  zero.cpp
inc/: first.hpp  fiveth.hpp  fourth.hpp  second.hpp  sixth.hpp  thirt.hpp  zero.hpp
